# get-build-info

./: .gitignore  CMakeLists.txt  README.md  build.sh  getBuildInfo.cpp
